具体功能已经实现

--- a/markdown-chrome-extensions-demo/manifest.json
+++ b/markdown-chrome-extensions-demo/manifest.json
@@ -20,7 +20,7 @@
 		{
 		  "matches": ["file:///*.md"],
 		  "run_at": "document_end",
-		  "js": ["event.js", "js/popup.js", "js/index.js"]
+		  "js": ["event.js", "js/popup.js"]
 		}
 	  ],
 	"options_page": "index.html"
