美化了popup界面,添加了about页面 基本完成

--- a/markdown-chrome-extensions-demo/manifest.json
+++ b/markdown-chrome-extensions-demo/manifest.json
@@ -13,7 +13,7 @@
 	"browser_action": 
 	{
 		"default_icon": "icon.png",
-		"default_title": "插件描述",
+		"default_title": "毕业设计 - 基于Chrome扩展插件的Markdown文本编辑器",
 		"default_popup": "popup.html"
 	},
 	"content_scripts": [
