--- a/markdown-chrome-extensions-demo/manifest.json
+++ b/markdown-chrome-extensions-demo/manifest.json
@@ -1,31 +1,29 @@
 {
-	"manifest_version": 2,
-	"name": "Markdown Chrome extensions",
-	"version": "1.0",
-	"description": "毕业设计 - 基于 Chrome 扩展插件的 Markdown 阅读编辑器",
-	"author": "zhaopeiran",
-	"permissions": [
-		"storage"
-	],
-	"icons": {
-		"48": "icon.png",
-		"128": "icon.png"
-	},
-	"browser_action": {
-		"default_icon": "icon.png",
-		"default_title": "毕业设计 - 基于Chrome扩展插件的Markdown文本编辑器",
-		"default_popup": "popup.html"
-	},
-	"content_scripts": [
-		{
-			"matches": [
-				"file:///*.md"
-			],
-			"run_at": "document_end",
-			"js": [
-				"js/popup.js"
-			]
-		}
-	],
-	"options_page": "index.html"
+    "manifest_version": 2,
+    "name": "Markdown Chrome extensions",
+    "version": "1.0.1",
+    "description": "毕业设计 - 基于 Chrome 扩展插件的 Markdown 阅读编辑器",
+    "author": "zhaopeiran",
+    "permissions": [
+        "storage"
+    ],
+    "icons": {
+        "48": "icon.png",
+        "128": "icon.png"
+    },
+    "browser_action": {
+        "default_icon": "icon.png",
+        "default_title": "毕业设计 - 基于Chrome扩展插件的Markdown文本编辑器",
+        "default_popup": "popup.html"
+    },
+    "content_scripts": [{
+        "matches": [
+            "file:///*.md"
+        ],
+        "run_at": "document_end",
+        "js": [
+            "js/popup.js"
+        ]
+    }],
+    "options_page": "index.html"
 }
